dùng csdl để lưu trữ các phương thức thanh toán nhằm admin có thể chỉnh on/off phương thức thanh toán
